--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
 	<canvas id="canvasTag" width = "800" height = "600"></canvas>
+	<script src="basicFunction.js"></script>
+	
+	
 	<script src="game.js"></script>
 </body>
