--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<canvas id="canvasTag" width = "800" height = "600"></canvas>
 	<script src="basicFunction.js"></script>
-	
+	<script src="player.js"></script>
 	
 	<script src="game.js"></script>
 </body>
