--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 	<canvas id="canvasTag" width = "800" height = "600"></canvas>
 	<script src="basicFunction.js"></script>
 	<script src="player.js"></script>
-	
+	<script src="enemies.js"></script>
 	<script src="game.js"></script>
 </body>
